test/tests/stages/18_structures/valid/no_structure_parameters/smoke_tests/simple.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: pair
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: a
            Int: 
          CMemberDeclaration: 
            TIdentifier: b
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[5]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: pair
                    Bool: 0
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  COr: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: a
                      CVar: 
                        TIdentifier: x
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  CBinary: 
                    CNotEqual: 
                    CDot: 
                      TIdentifier: b
                      CVar: 
                        TIdentifier: x
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 1
                            None: 
                None: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: x_ptr
                  CSingleInit: 
                    CAddrOf: 
                      CVar: 
                        TIdentifier: x
                        None: 
                      None: 
                    None: 
                  Pointer: 
                    Structure: 
                      TIdentifier: pair
                      Bool: 0
                  None: 
            CS: 
              CIf: 
                CBinary: 
                  COr: 
                  CBinary: 
                    CNotEqual: 
                    CArrow: 
                      TIdentifier: a
                      CVar: 
                        TIdentifier: x_ptr
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  CBinary: 
                    CNotEqual: 
                    CArrow: 
                      TIdentifier: b
                      CVar: 
                        TIdentifier: x_ptr
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  None: 
                CCompound: 
                  CB: 
                    List[1]: 
                      CS: 
                        CReturn: 
                          CConstant: 
                            CConstInt: 
                              TInt: 2
                            None: 
                None: 
            CS: 
              CReturn: 
                CConstant: 
                  CConstInt: 
                    TInt: 0
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
