test/tests/stages/18_structures/invalid_types/invalid_member_operators/member_pointer_non_struct_pointer.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[2]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: a
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: x
            Int: 
          CMemberDeclaration: 
            TIdentifier: y
            Int: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: my_struct
                  CCompoundInit: 
                    List[2]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 2
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: a
                    Bool: 0
                  None: 
            CS: 
              CReturn: 
                CArrow: 
                  TIdentifier: x
                  CVar: 
                    TIdentifier: my_struct
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
